--- a/foundry.toml
+++ b/foundry.toml
@@ -10,4 +10,5 @@ remappings = [
     '@uniswap/v2-core/=lib/v2-core/',
     '@uniswap/v2-periphery=lib/v2-periphery',
     '@uniswap/lib/=lib/solidity-lib/',
+    '@src/=src/',
 ]
