--- a/foundry.toml
+++ b/foundry.toml
@@ -1,14 +1,14 @@
 [default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-auto_detect_solc = true
-remappings = [
-    '@contracts/=src/contracts/',
-    '@openzeppelin/=lib/openzeppelin-contracts/',
-    '@forge-std/=lib/forge-std',
-    '@uniswap/v2-core/=lib/v2-core/',
-    '@uniswap/v2-periphery=lib/v2-periphery',
-    '@uniswap/lib/=lib/solidity-lib/',
-    '@src/=src/',
-]
+	src='.'
+	out = 'out'
+	libs = ['lib']
+	auto_detect_solc = true
+	remappings = [
+	    '@contracts/=src/contracts/',
+	    '@openzeppelin/=lib/openzeppelin-contracts/',
+	    '@forge-std/=lib/forge-std',
+	    '@uniswap/v2-core/=lib/v2-core/',
+	    '@uniswap/v2-periphery=lib/v2-periphery',
+	    '@uniswap/lib/=lib/solidity-lib/',
+	    '@src/=src/',
+	]
